# lcl_measurement_tool-android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro  version.properties
app/schemas/com.lcl.lclmeasurementtool.Database.DB.MeasurementResultDatabase/: 1.json
app/schemas/com.lcl.lclmeasurementtool.database.db.AppDatabase/: 1.json
app/schemas/com.lcl.lclmeasurementtool.database.db.MeasurementResultDatabase/: 1.json
app/src/androidTest/java/com/lcl/lclmeasurementtool/: ExampleInstrumentedTest.java  SignalStrengthReadAndWriteTest.java
app/src/androidTest/java/com/lcl/lclmeasurementtool/sync/: UploadWorkerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: iperf3
app/src/main/cpp/: Android.mk  CMakeLists.txt  README.md  common_jni_util.c  iperf3_java_callback.c  iperf3_jni_api.c
app/src/main/cpp/include/: common_jni_util.h  iperf3_java_callback.h  iperf3_jni_api.h  iperf3_state_wrapper.h  iperf_state_wrapper_interface.h
app/src/main/cpp/libs/: CMakeLists.txt
app/src/main/cpp/libs/iperf-cmake-wrapper/: CMakeLists.txt
app/src/main/cpp/libs/iperf-cmake-wrapper/iperf-3.10.1/src/: iperf.h  iperf_api.c  iperf_api.h  iperf_client_api.c
app/src/main/cpp/libs/openssl-cmake-wrapper/: CMakeLists.txt
app/src/main/cpp/libs/openssl-cmake-wrapper/openssl-1_1_1l/openssl-arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/libs/openssl-cmake-wrapper/openssl-1_1_1l/openssl-armeabi-v7a/include/openssl/: opensslconf.h
app/src/main/cpp/libs/openssl-cmake-wrapper/openssl-1_1_1l/openssl-armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/libs/openssl-cmake-wrapper/openssl-1_1_1l/openssl-x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/libs/openssl-cmake-wrapper/openssl-1_1_1l/openssl-x86_64/include/openssl/: opensslconf.h
app/src/main/cpp/libs/openssl-cmake-wrapper/openssl-1_1_1l/openssl-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/src/: CMakeLists.txt  common_jni_util.c  iperf3_java_callback.c  iperf3_jni_api.c  iperf3_jni_api.cpp  iperf3_state_wrapper.c  iperf3_state_wrapper.cpp
app/src/main/java/: README.md
app/src/main/java/com/lcl/lclmeasurementtool/: ConnectivityAdapter.kt  ConnectivityApplication.kt  ConnectivityDataFragment.java  ConnectivityFragment.kt  FirstFragment.java  FirstFragment.kt  HistoricalDataAdapter.kt  HomeFragment.java  LCLApplication.kt  MainActivity.java  MainActivity2.kt  MainActivityViewModel.kt  SecondFragment.java  SecondFragment.kt  SettingsFragment.java  SignalDataFragment.java  SignalStrengthAdapter.kt  SignalStrengthApplication.kt  SignalStrengthFragment.kt
app/src/main/java/com/lcl/lclmeasurementtool/Constants/: IperfConstants.java  NetworkConstants.java  SimCardConstants.java
app/src/main/java/com/lcl/lclmeasurementtool/Functionality/: AbstractIperfWorker.java  AbstractPingWorker.java  Iperf.java  Iperf3Callback.java  Iperf3Client.java  Iperf3Config.java  IperfDownStreamWorker.java  IperfError.java  IperfListener.java  IperfStats.java  IperfUpStreamWorker.java  IperfUtils.java  NetworkTestViewModel.java  Ping.java  PingError.java  PingListener.java  PingStats.java  PingUtils.java  PingWorker.java  README.md  UploadViewModel.java  UploadWorker.java
app/src/main/java/com/lcl/lclmeasurementtool/Managers/: CellularChangeListener.java  CellularManager.java  DeprecatedKeyStoreManager.java  KeyStoreManager.java  LocationServiceListener.java  LocationServiceManager.java  LocationUpdatesListener.java  NetworkChangeListener.java  NetworkManager.java  README.md  UploadManager.java
app/src/main/java/com/lcl/lclmeasurementtool/Models/: ConnectivityMessageModel.java  MeasurementDataModel.java  MeasurementDataReportModel.java  QRCodeKeysModel.java  README.md  RegistrationMessageModel.java  SignalStrengthMessageModel.java
app/src/main/java/com/lcl/lclmeasurementtool/Receivers/: README.md  SimStatesReceiver.java
app/src/main/java/com/lcl/lclmeasurementtool/Utils/: AbstractDataTransferRate.java  AnalyticsUtils.java  ConvertUtils.java  DataTransferRateUnit.java  DecoderException.java  ECDSA.java  EncoderException.java  Hex.java  LocationUtils.java  README.md  RegistrationMessageModel.java  SecurityUtils.java  SerializationUtils.java  SignalStrength.java  SignalStrengthLevel.java  SimCardConstants.java  TimeUtils.java  UIUtils.java  UnitUtils.java
app/src/main/java/com/lcl/lclmeasurementtool/constants/: IperfConstants.kt  NetworkConstants.kt  README.md  SimCardConstants.kt
app/src/main/java/com/lcl/lclmeasurementtool/database/: README.md
app/src/main/java/com/lcl/lclmeasurementtool/ui/: AppState.kt  (+13 more)
app/src/main/jni/: Android.mk  Application.mk  common_jni_util.c  iperf3_jni_api.c  iperf3_jni_api.h
app/src/main/jni/iperf-3.1.3/src/: iperf_api.c
app/src/main/proto/: user_preferences.proto
app/src/main/res/drawable/: cellular_strength.xml  download.xml  export.xml  go_public.xml  info.xml  mail.xml  ping.xml  signal_strength_indicator.xml  speed_test.xml  start.xml  stop.xml  upload.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  connectivity_data_card_template.xml  connectivity_data_fragment.xml  content_main.xml  first_fragment.xml  home_fragment.xml  login.xml  signal_data_card_template.xml  signal_data_fragment.xml  stats_template.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  preferences.xml
app/src/test/java/com/lcl/lclmeasurementtool/: ConvertUtilUnitTest.java  ECDSATest.java  ExampleUnitTest.java  FlowTest.kt  ModelSerializationTest.java  NetworkUploadTest.java  PostRequestTest.java  SecurityTest.java  TimeUtilTest.java
gradle/wrapper/: gradle-wrapper.properties
libndt7/: build.gradle
libndt7/src/main/: AndroidManifest.xml
tools/: README.md  test_server.py
(+120 files in other folders)
